--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="pt-br" class="h-100">
 
 <head>
     <meta charset="utf-8">
@@ -89,7 +89,7 @@
             <% if(valorConvertido){ %>
                 <h3>Valor Convertido</h3>
                 <%= valorConvertido %>
-             <% } %>            
+                    <% } %>
         </div>
     </main>
     <footer class="footer mt-auto py-3 bg-light">
